[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/GUI_elements/menu.gd" type="Script" id=1]
[ext_resource path="res://nodes/GUI_elements/quit_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://nodes/GUI_elements/save_button.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.214844, 0.214844, 0.214844, 0.900549 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[node name="menu" type="PopupPanel" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1664.0
margin_bottom = 960.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 1 )
popup_exclusive = false
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Popup", "Theme", "custom_styles" ]

[node name="ItemList" type="ItemList" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 656.0
margin_top = 232.0
margin_right = 976.0
margin_bottom = 672.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [  ]
select_mode = 0
allow_reselect = true
icon_mode = 1
fixed_icon_size = Vector2( 0, 0 )
_sections_unfolded = [ "Columns", "Focus", "Icon" ]

[node name="exit_button" type="Button" parent="ItemList" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 72.0
margin_right = 217.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Return to Game"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_styles" ]

[node name="quit_button" parent="ItemList" index="2" instance=ExtResource( 2 )]

[node name="Button3" type="Button" parent="ItemList" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 168.0
margin_right = 216.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="save_button" parent="ItemList" index="4" instance=ExtResource( 3 )]

margin_left = 104.0
margin_top = 120.0
margin_right = 216.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 768.0
margin_top = 264.0
margin_right = 861.0
margin_bottom = 278.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "GAME PAUSED"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="about_to_show" from="." to="." method="_on_menu_about_to_show"]

[connection signal="pressed" from="ItemList/exit_button" to="." method="_on_exit_button_pressed"]


